# jouresearch-nlp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/examples/: alice.txt  ner_text.json  topics_text.json
jouresearch_nlp/: __init__.py
jouresearch_nlp/ner/: aggregate.py
jouresearch_nlp/schemas/: __init__.py  document.py  entity.py  topic.py  wordcloud.py
jouresearch_nlp/topicmodelling/: __init__.py  load.py  representation.py  save.py
jouresearch_nlp/utils/: __init__.py  constants.py  parser.py
jouresearch_nlp/wordcloud/: construct.py  frequency.py  layout.py
notebooks/: generate_statistical_analysis.ipynb  generate_topics.ipynb  generate_wordcloud.ipynb
tests/: test_jouresearch_nlp.py
